--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html>
+    <body bgcolor="green">
     <h1>
         Charity Finder
         </h1>
-        <button type="button">Click Me!</button>
+        <button type="button">Login</button>
+        <button type="button">Sign Up</button>
+        </body>
 </html>
+<h1 style="background-color:mediumseagreen;">Charity Finder</h1>
 
 
