--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
     <body bgcolor="green">
-    <h1>
+    <h1> <center>
         Charity Finder
+            </center>
         </h1>
         <button type="button">Login</button>
         <button type="button">Sign Up</button>
