user main page is mostly done

--- a/use_main_page.html
+++ b/use_main_page.html
@@ -1,4 +1,139 @@
 <!DOCTYPE html>
 <html>
-    
+    <style>
+        body {
+            background-color: lightgreen;
+        }
+        h2 {
+            position:absolute;
+            top:5em;
+            left:2em;
+        }
+        div { 
+            color: black
+        } /* so this makes everything in the div boxes have black text color */
+        .charity_list {
+            background-color: white;
+            position:absolute;
+            width: 500px;
+            height: 200px;
+            left:2em;
+            top:11em;
+
+        }
+        h1 { 
+            position: relative;
+            font-size:60px;
+            left:2em;
+        }
+        .gear {
+            position:absolute;
+            top: 1em;
+            left:0;
+            height: 100px;
+            width: 100px;
+        }
+        .Calendar {
+            position:absolute;
+            top:4em;
+            right:6em;
+            height:300px;
+            width: 300px;
+        }
+        h3 {
+            position: absolute;
+            top:0;
+            right:9em;
+        }
+        .friends {
+            background-color: white;
+            position: absolute;
+            text-align: center;
+            vertical-align: middle;
+            height:50px;
+            width:200px;
+            top:27em;
+            right:10em;
+        }
+        .charity_search {
+            background-color: white;
+            position: absolute;
+            text-align: center;
+            vertical-align: middle;
+            height:50px;
+            width:200px;
+            top:31em;
+            right:10em;
+        }
+        .messaging {
+            background-color: white;
+            position: absolute;
+            text-align: center;
+            vertical-align: middle;
+            height:50px;
+            width:200px;
+            top:35em;
+            right:10em;
+        }
+        .log_out {
+            background-color: white;
+            position: absolute;
+            text-align: center;
+            vertical-align: middle;
+            height:50px;
+            width:200px;
+            top:39em;
+            right:10em;
+        }
+    </style>
+
+    <body>
+        <a href="settings_user.html">
+        <img class ="gear" src="126472.png">
+        </a>
+        <h1>
+            User Main Page
+        </h1>
+        <h2>
+            Your Charities:
+        </h2>
+        <h3>
+            Upcoming Events:
+        </h3>
+        <div class="charity_list">
+            Penfield Players
+            <br>
+            Big Brothers, Big Sisters
+            <br>
+            Boys & Girls Clubs of Rochester
+            Reconnect Rochester
+            <br>
+            Rochester AmeriCorps
+            <br>
+            Generic Charity
+        </div>
+        <a href = 'friends_list.html'>
+        <div class = "friends">
+            <p>Friends List</p>
+        </div>
+        </a>
+        <a href="charity_search.html">
+        <div class = "charity_search">
+            <p>Search for a Charity</p>
+        </div>
+        </a>
+        <a href="messaging.html">
+        <div class = "messaging">
+            <p> Messaging </p>
+        </div>
+        </a>
+        <a>
+        <div class = "log_out">
+            <p>Log Out</p>
+        </div>
+        </a>
+
+        <img class="Calendar" src='Blank-Calendar-no-boxes-1.jpg'>
+
+    </body>
 </html>
