I fixed the logout button

--- a/use_main_page.html
+++ b/use_main_page.html
@@ -127,7 +127,7 @@
             <p> Messaging </p>
         </div>
         </a>
-        <a>
+        <a href="index.html">
         <div class = "log_out">
             <p>Log Out</p>
         </div>
