now has links to other pages

--- a/charity_main_page.html
+++ b/charity_main_page.html
@@ -23,8 +23,8 @@
 
     </text>
     <br><br>
-    <input type = "button" value="Rate Volunteer"><br><br>
-    <input type="button" value = "Add Admin Account"><br><br>
+    <a href="user_ratings_leaderboard.html"><input type = "button" value="Rate Volunteer"></a><br><br>
+    <a href = "add_remove_admin.html"><input type="button" value = "Add/Remove Admin Account"></a><br><br>
 
-    <input type = "button" value="Log Out"
+    <a href ="index.html"><input type = "button" value="Log Out"><a/>
 </html>
