messaging + user_profile_icon.png

--- a/messaging.html
+++ b/messaging.html
@@ -1,4 +1,63 @@
 <!DOCTYPE html>
 <html>
-    
+    <style>
+        body {
+            background-color: lightgreen;
+        }
+        h2 {
+            position:absolute;
+            top:7em;
+            left:4em;
+        }
+        div { 
+            color: black
+        } /* so this makes everything in the div boxes have black text color */
+        h1 { 
+            position: relative;
+            font-size:60px;
+            left:2em;
+        }
+        .user_profile_icon {
+            position:absolute;
+            top:7em;
+            left:3em;
+            height: 100px;
+            width: 100px;
+        }
+        .return_main {
+            background-color: white;
+            position: absolute;
+            text-align: center;
+            vertical-align: middle;
+            height:50px;
+            width:200px;
+            top:3em;
+            right:10em;
+        }
+        .send_message {
+            background-color: white;
+            position: absolute;
+            text-align: center;
+            vertical-align: middle;
+            height:50px;
+            width:200px;
+            top:31em;
+            right:10em;
+        }
+    </style>
+
+    <body>
+        <h1>
+            Messaging
+        </h1>
+        <img class ="user_profile_icon src="user_profile_icon.png">
+        <h2>
+            charity_friend123
+        </h2>
+        <a href="use_main_page.html">
+        <div class = "return_main">
+            <p> Return To Main </p>
+        </div>
+        </a>
+    </body>
 </html>
