forgot password with links

--- a/forgot_password.html
+++ b/forgot_password.html
@@ -1,4 +1,14 @@
 <!DOCTYPE html>
 <html>
+<title>Forgot Password</title>    
+<h1>Forgot Password?</h1>
+<h5>Enter email address associated with account; follow steps in recovery email to change password.</h5>
+<form>
+    <label for="Email">Email:</label>
+    <input type="text" id="email" name="email"><br><br>
     
+</form>
+
+<a href="recovery_email_sent.html"><input type="button" value="Send"></a>
+
 </html>
