--- a/use_main_page.html
+++ b/use_main_page.html
@@ -100,6 +100,7 @@
         <h3>
             Upcoming Events:
         </h3>
+
         <div class="charity_list">
             Penfield Players
             <br>
@@ -110,23 +111,28 @@
             <br>
             Rochester AmeriCorps
             <br>
-            Generic Charity
+            <a href="charity_hub_page.html">Generic Charity</a>
+
         </div>
+
         <a href = 'friends_list.html'>
         <div class = "friends">
             <p>Friends List</p>
         </div>
         </a>
+
         <a href="charity_search.html">
         <div class = "charity_search">
             <p>Search for a Charity</p>
         </div>
         </a>
+
         <a href="messaging.html">
         <div class = "messaging">
             <p> Messaging </p>
         </div>
         </a>
+        
         <a href="index.html">
         <div class = "log_out">
             <p>Log Out</p>
