recovery email sent with link

--- a/recovery_email_sent.html
+++ b/recovery_email_sent.html
@@ -1,5 +1,11 @@
 <!DOCTYPE html>
 <html>
+<title>Recovery Email Sent</title>
+<h1>Recovery Email Sent</h1>
+<text>If email address corresponds to account, follow the steps in the recovery email to change password.
+</text>
+<br>
 
+<a href="index.html"><input type ="button" value="Back to Login"><a/>
 
 </html>
