added username and password fields

--- a/index.html
+++ b/index.html
@@ -25,17 +25,22 @@
     .login {
         position: absolute;
         left: 20em;
-        top: 13em;
+        top: 18em;
     }
     .signup {
         position: absolute;
         left: 37em;
-        top: 13em;
+        top: 18em;
     }
     .charity {
         position: absolute;
         left: 28.5em;
-        top: 18em;
+        top: 23em;
+    }
+    .info {
+        position: absolute;
+        left: 36.5em;
+        top: 14em;
     }
     </style>
     <body>
@@ -62,6 +67,14 @@
             <p>Create A Charity</p>
         </div>
         </a>
+
+        <form class = "info">
+            <label>Username:</label> <br>
+            <input type="text"> <br>
+            <label>Password:</label> <br>
+            <input type="text">
+        </form>
+
     </body>
 </html>
 
