--- a/index.html
+++ b/index.html
@@ -42,6 +42,11 @@
         left: 36.5em;
         top: 14em;
     }
+    .forgot {
+        position: absolute;
+        left: 36.5em;
+        top: 18em;
+    }
     </style>
     <body>
         <h1 class = "title">
@@ -66,6 +71,10 @@
         <div class = "charity">
             <p>Create A Charity</p>
         </div>
+        </a>
+
+        <a href="forgot_password.html">
+            <p class="forgot">Forgot Password?</p>
         </a>
 
         <form class = "info">
