friends_list.html

--- a/friends_list.html
+++ b/friends_list.html
@@ -97,28 +97,28 @@
         .block_icon1 {
             position:absolute;
             top:12.7em;
-            left:19.4em;
+            left:19.7em;
             height: 20px;
             width: 20px;
         }
         .block_icon2 {
             position:absolute;
             top:15.7em;
-            left:20.15em;
+            left:20.45em;
             height: 20px;
             width: 20px;
         }
         .block_icon3 {
             position:absolute;
             top:18.7em;
-            left:18.5em;
+            left:18.8em;
             height: 20px;
             width: 20px;
         }
         .block_icon4 {
             position:absolute;
             top:21.7em;
-            left:19.85em;
+            left:20.15em;
             height: 20px;
             width: 20px;
         }
@@ -168,7 +168,9 @@
         <h2>
             charity_friend123
         </h2>
-        <img class = "chat_icon1" src="chat_icon.png">
+        <a href="messaging.html">
+            <img class = "chat_icon1" src="chat_icon.png">
+        </a>
         <img class = "block_icon1" src="block_icon.png">
         
         <img class ="user_profile_icon2" src="user_profile_icon.png">
