--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <label>Username:</label> <br>
             <input type="text"> <br>
             <label>Password:</label> <br>
-            <input type="text">
+            <input type="password">
         </form>
 
     </body>
