create/user/charity

--- a/create_user_profile.html
+++ b/create_user_profile.html
@@ -75,22 +75,22 @@
         
         <div class = "email">
             <label for="email">Email:</label>
-            <input type="text" id="email" name="email" size=100 placeholder="Enter username here">
+            <input type="text" id="email" name="email" size=100 placeholder="Enter email here">
         </div>
 
         <div class = "phone_number">
             <label for="phone_number">Phone Number:</label>
-            <input type="text" id="phone_number" name="phone_number" size=100 placeholder="Enter username here">
+            <input type="text" id="phone_number" name="phone_number" size=100 placeholder="Enter phone number here">
         </div>
 
         <div class = "dob">
             <label for="dob">Date of Birth:</label>
-            <input type="text" id="dob" name="dob" size=100 placeholder="Enter username here">
+            <input type="text" id="dob" name="dob" size=100 placeholder="Enter date of birth here">
         </div>
 
         <div class = "address">
             <label for="address">Address:</label>
-            <input type="text" id="address" name="address" size=100 placeholder="Enter username here">
+            <input type="text" id="address" name="address" size=100 placeholder="Enter address here">
         </div>
 
         <div class = "username">
@@ -100,12 +100,12 @@
 
         <div class = "password">
             <label for="password">Password:</label>
-            <input type="text" id="password" name="password" size=100 placeholder="Enter username here">
+            <input type="text" id="password" name="password" size=100 placeholder="Enter password here">
         </div>
 
         <div class = "confirm_password">
             <label for="confirm_password">Confirm Password:</label>
-            <input type="text" id="confirm_password" name="confirm_password" size=100 placeholder="Enter username here">
+            <input type="text" id="confirm_password" name="confirm_password" size=100 placeholder="Enter password here">
         </div>
 
         <a href="index.html">
