pages are now green

--- a/forgot_password.html
+++ b/forgot_password.html
@@ -1,5 +1,20 @@
 <!DOCTYPE html>
 <html>
+    <style>
+        body {
+            background-color: lightgreen;
+        }
+        h1 {
+            text-align: center;
+        }
+
+        h5{
+            text-align: center;
+        }
+        form{
+            text-align: center;
+        }
+    </style>
 <title>Forgot Password</title>    
 <h1>Forgot Password?</h1>
 <h5>Enter email address associated with account; follow steps in recovery email to change password.</h5>
