--- a/recovery_email_sent.html
+++ b/recovery_email_sent.html
@@ -1,11 +1,26 @@
 <!DOCTYPE html>
 <html>
+    <style>
+    body {
+        background-color: lightgreen;
+    }
+    h1 {
+        text-align: center;
+    }
+    p {
+        text-align: center;
+    }
+    .button {
+        justify-content: center;
+    }
+    </style>
+    
 <title>Recovery Email Sent</title>
 <h1>Recovery Email Sent</h1>
-<text>If email address corresponds to account, follow the steps in the recovery email to change password.
-</text>
+<p>If email address corresponds to account, follow the steps in the recovery email to change password.
+</p>
 <br>
 
-<a href="index.html"><input type ="button" value="Back to Login"><a/>
+<a href="index.html"><input class ="button" value="Back to Login"><a/>
 
 </html>
