--- a/charity_main_page.html
+++ b/charity_main_page.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+    <style>
+        body{background-color: lightgreen;}
+    </style>
     <title>Charity Main Page</title>
     <h1>Charity Main Page</h1>
     <br>
