this one is good too

--- a/charity_hub_page.html
+++ b/charity_hub_page.html
@@ -1,4 +1,136 @@
 <!DOCTYPE html>
 <html>
-    
+    <style>
+        body {
+            background-color: lightgreen;
+        }
+        h2 {
+            position:absolute;
+            top:5em;
+            left:2em;
+        }
+        div { 
+            color: black
+        } /* so this makes everything in the div boxes have black text color */
+        .announcements {
+            background-color: white;
+            position:absolute;
+            width: 500px;
+            height: 200px;
+            left:2em;
+            top:11em;
+        }
+        h1 { 
+            position: relative;
+            font-size:60px;
+            left:2em;
+        }
+        .Calendar {
+            position:absolute;
+            top:4em;
+            right:6em;
+            height:300px;
+            width: 300px;
+        }
+        h3 {
+            position: absolute;
+            top:0;
+            right:9em;
+        }
+        .friends {
+            background-color: white;
+            position: absolute;
+            text-align: center;
+            vertical-align: middle;
+            height:50px;
+            width:200px;
+            top:27em;
+            right:10em;
+        }
+        .charity_search {
+            background-color: white;
+            position: absolute;
+            text-align: center;
+            vertical-align: middle;
+            height:50px;
+            width:200px;
+            top:31em;
+            right:10em;
+        }
+        .messaging {
+            background-color: white;
+            position: absolute;
+            text-align: center;
+            vertical-align: middle;
+            height:50px;
+            width:200px;
+            top:35em;
+            right:10em;
+        }
+        .log_out {
+            background-color: white;
+            position: absolute;
+            text-align: center;
+            vertical-align: middle;
+            height:50px;
+            width:200px;
+            top:39em;
+            right:10em;
+        }
+        .return_main {
+            background-color: white;
+            position: absolute;
+            text-align: center;
+            vertical-align: middle;
+            height:50px;
+            width:200px;
+            bottom:3em;
+            right:10em;
+        }
+        .donationlink {
+            background-color: gainsboro;
+            position:absolute;
+            width: 500px;
+            height: 25px;
+            left:2em;
+            top:25em;
+        }
+        .flavortext {
+            background-color: gainsboro;
+            position: absolute;
+            top: 25em;
+            right: 2em;
+            height: 40px;
+            width: 400px;
+        }
+    </style>
+
+    <body>
+        <h1>
+            Generic Charity Page
+        </h1>
+        <h2>
+            Announcements:
+        </h2>
+        <h3>
+            Upcoming Events:
+        </h3>
+
+        <div class="announcements">
+            Charity Admin Account: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+
+        </div>
+        <a href="use_main_page.html">
+            <div class = "return_main">
+                <p> Return To Main </p>
+            </div>
+        </a> 
+
+        <div class="donationlink"> Donations Accepted Here: donationlink.donation </div>
+        
+        <div class="flavortext">Need Volunteers on every weekend this week: Open volunteering hours between 5pm-12am</div>
+
+        <img class="Calendar" src='Blank-Calendar-no-boxes-1.jpg'>
+
+    </body>
 </html>
