friends_list.html

--- a/friends_list.html
+++ b/friends_list.html
@@ -157,7 +157,7 @@
         
         <div class = "search_user">
             <input type="search_user" id="search_user" name="search_user" size=100 placeholder="Enter username here">
-            <input type="submit" value="Send">
+            <input type="submit" value="Search">
         </div>
         
         <div class = "friends_list">
