I made the create charity button link to the charity main page so that it is accessible

--- a/create_charity_profile.html
+++ b/create_charity_profile.html
@@ -97,7 +97,7 @@
             <input type="text" id="confirm_password" name="confirm_password" size=100 placeholder="Enter password here">
         </div>
 
-        <a href="index.html">
+        <a href="charity_main_page.html">
             <div class = "create_charity_account">
                 <p> Create Charity Account </p>
             </div>
