added the settings button

--- a/charity_main_page.html
+++ b/charity_main_page.html
@@ -2,9 +2,22 @@
 <html>
     <style>
         body{background-color: lightgreen;}
+
+        .gear {
+            position:absolute;
+            top: 1em;
+            left:0;
+            height: 100px;
+            width: 100px;
+        }
+        .title {
+            position: relative;
+            left: 4em;
+            top: 1em;
+        }
     </style>
     <title>Charity Main Page</title>
-    <h1>Charity Main Page</h1>
+    <h1 class = "title">Charity Main Page</h1>
     <br>
     <h2>Announcement Calendar</h2>
     <img src = "Blank-Calendar-no-boxes-1.jpg" width="400" height="300">
@@ -30,4 +43,8 @@
     <a href = "add_remove_admin.html"><input type="button" value = "Add/Remove Admin Account"></a><br><br>
 
     <a href ="index.html"><input type = "button" value="Log Out"><a/>
+    
+    <a href="settings_charity.html">
+        <img class ="gear" src="126472.png">
+        </a>
 </html>
